# xbraid_library_backup

./: .gitignore  Makefile.am  README.md  autogen.sh  braid.out.cycle  configure.ac
src/: _braid_dyn.h  braid_dyn.c  braid_dyn.h  dmr_dyn.c  dmr_dyn.h  ex-01_dyn.c  ex-heat_equation.c  ex-heat_equation_2D.c  uvector_dyn.c
src/examples/: Makefile  braid.out.cycle  ex-01_dyn.c  ex-heat_equation.c  ex-heat_equation_2D.c
